# stt-tg-bot

./: .bandit  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
stt_tg_bot/: __init__.py  main.py
stt_tg_bot/config/: settings.py
stt_tg_bot/handlers/: bot_handlers.py
stt_tg_bot/services/: groq_client.py  openai_client.py  webhook_server.py
stt_tg_bot/utils/: access_control.py  file_helpers.py  messages.py
tests/: conftest.py
tests/integration/: test_webhook_server.py
tests/unit/: test_access_control.py  test_config.py  test_groq_client.py  test_messages.py
